--- a/src/app/hello/hello.html
+++ b/src/app/hello/hello.html
@@ -1,3 +1,3 @@
-<h1 class="text-xl text-gray-800 font-semibold p-4 m-4 bg-amber-500 w-36">
+<h1 class="text-xl text-gray-800 font-semibold p-4 m-4 bg-amber-500 w-36 rounded-md">
     Hello {{ name }}!
 </h1>
