feat: implementação de navbar com rotas, lucideangular + tailwind

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,7 @@
-<app-hello name="Lucas"></app-hello>
+<div class="flex">
+    <app-navbar></app-navbar>
+
+    <div class="flex-1 p-10">
+        <router-outlet></router-outlet>
+    </div>
+</div>
