feat(ui): configuração global do include de registros dos icons e ajustes na renderização dos icons do navbar

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -3,7 +3,7 @@
         <li>
             <a href="/" routerLinkActive="active"
             class="flex items-center gap-3 text-gray-700 hover:text-blue-600 transition">
-            <lucide-icon name="home"></lucide-icon>
+            <lucide-icon name="house"></lucide-icon>
             <span class="text-xl font-medium">Home</span>
         </a>
         </li>
@@ -27,7 +27,7 @@
         <li>
             <a href="/relatorios" routerLinkActive="active"
             class="flex items-center gap-3 text-gray-700 hover:text-blue-600 transition">
-            <lucide-icon name="bar-chart-3"></lucide-icon>
+            <lucide-icon name="file"></lucide-icon>
             <span class="text-xl font-medium">Relatórios</span>
         </a>
         </li>
