--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -30,9 +30,15 @@
      <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
 
      <div class="col-span-2 bg-white rounded-xl shadow p-6">
-        <h2 class="text-xl font-bold mb-4 flex items-center gap-2">
-            Estudos Recentes
-        </h2>
+        <h2 class="text-xl font-bold mb-4 flex items-center gap-2">Estudos Recentes</h2>
+
+        <app-course-card
+            title="Matemática"
+            subtitle="Cálculo Diferencial"
+            time="2h 45m"
+            updated="Hoje"
+            status="Concluído"
+        />
 
      </div>
 
