--- a/src/app/components/progress-bar/progress-bar.html
+++ b/src/app/components/progress-bar/progress-bar.html
@@ -1,1 +1,6 @@
-<p>progress-bar works!</p>
+<div class="w-full bg-gray-200 rounded-full h-2">
+  <div 
+    class="h-2 rounded-full bg-blue-500 transition-all duration-300"
+    [style.width.%]="progress">
+  </div>
+</div>
