--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -2,7 +2,7 @@
 
     <div>
     <div class="flex items-center gap-3">
-        <div class="w-10 h-10 bg-blue-500 rounded-md"></div>
+        <img src="ilha.png" class="w-10 h-10 bg-gray-300 rounded-md" alt="ilha">
         <span class="text-2xl font-bold text-gray-800">Laugh Tale</span>
     </div>
 
