--- a/src/app/pages/estudos/estudos.html
+++ b/src/app/pages/estudos/estudos.html
@@ -1,1 +1,8 @@
-<p>estudos works!</p>
+<div class="flex justify-between items-center p-8">
+    <div>
+        <h1 class="text-slate-600 text-sm">Gerencie suas sessões de estudos</h1>
+    </div>
+<button class="flex items-center gap-2 px-4 py-2.5 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors shadow-sm">
+   <span>+ Nova Sessão</span>
+</button>
+</div>
