feat: criação da página de Configurações do usuário

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -6,7 +6,7 @@
         <span class="text-2xl font-bold text-gray-800">Laugh Tale</span>
     </div>
 
-    <ul class="space-y-5 mt-10">
+    <ul class="space-y-7 mt-13">
         <li>
             <a href="/" routerLinkActive="active"
             class="flex items-center gap-3 text-gray-700 hover:text-blue-600 transition">
@@ -41,14 +41,15 @@
     </ul>
     </div>
 
-    <div class="flex items-end gap-3 p-3 rounded-lg hover:bg-gray-100 cursor-pointer transition">
-        <div class="h-10 w-10 rounded-full bg-gray-500 flex items-center justify-center font-bold">
-            U
-        </div>
-        <div>
-            <p class="text-sm font-medium text-gray-800">Usuário</p>
-            <p class="text-xs text-gray-500">user@gmail.com</p>
-        </div>
-    </div>
+        <a routerLink="/configuracoes" class="flex items-end gap-3 p-3 rounded-md hover:bg-gray-200 cursor-pointer transition">
+            <div class="h-10 w-10 rounded-full bg-gray-500 flex items-center justify-center font-bold">
+                J
+            </div>
+
+            <div>
+                <p class="text-sm font-medium text-gray-700">Joy Boy</p>
+                <p class="text-xs text-gray-500">joyboy@gmail.com</p>
+            </div>
+        </a>
 
 </nav>
