--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -8,8 +8,8 @@
       <span class="absolute top-0 right-0 bg-red-500 w-2 h-2 rounded-full"></span>
     </button>
 
-    <div class="w-10 h-10 rounded-full bg-gray-200 flex items-center justify-center cursor-pointer">
-      <i class="bi bi-person text-xl text-gray-600">U</i>
+    <div class="w-10 h-10 rounded-full bg-gray-200 flex items-center justify-center">
+      <lucide-icon name="circle-user" class="bi bi-person text-xl text-gray-600">U</lucide-icon>
     </div>
   </div>
 
