--- a/src/app/pages/estudos/estudos.html
+++ b/src/app/pages/estudos/estudos.html
@@ -25,11 +25,9 @@
 
 </div>
 
-<div class="flex flex-row justify-center gap-3 mb-5">
+<div class="flex flex-col justify-center gap-3 mb-5">
 
-    <h2>( TABELA ) Busca por matéria ou tópico...</h2>
-    <button class="bg-amber-300 rounded-md w-15">Filtros</button>
-    <button class="bg-amber-600 rounded-md w-18">Período</button>
+    <app-studies-filters></app-studies-filters>
 
 </div>
 
