--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "tailwindcss";
+
+.btn-filter {
+  @apply px-3 py-1.5 bg-blue-50 text-blue-700 rounded-md text-xs 
+         hover:bg-blue-100 transition-colors cursor-pointer;
+}
+
+.table-head-cell {
+    @apply text-left px-4 py-5 text-xs text-slate-600 uppercase tracking-wider;
+}
