--- a/src/app/pages/estudos/estudos.html
+++ b/src/app/pages/estudos/estudos.html
@@ -1,4 +1,4 @@
-<div class="p-8">
+<div class="px-6 lg:px-10 py-6 w-full max-w-7xl mx-auto space-y-10">
     <div class="flex justify-between items-center">
 
         <div>
@@ -11,10 +11,9 @@
         </span>
     </button>
 
-
     </div>
 
-    <div class="p-6 rounded-xl flex justify-evenly gap-4 ">
+    <div class="rounded-xl flex justify-evenly gap-4">
 
         <ng-container *ngFor="let s of studiesKips">
             <app-stats-card
