--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,13 +1,13 @@
-<div class="flex">
+<div class="flex h-screen">
 
-    <app-navbar class="fixed left-0 top-0 h-screen w-64 z-20"></app-navbar>
+  <app-navbar class="fixed left-0 top-0 h-screen w-64 z-20"></app-navbar>
 
-    <div class="flex-1">
-        <app-header class="fixed left-64 right-0 top-0 h-16 z-30"></app-header>
+  <div class="flex-1 flex flex-col">
+    <app-header class="fixed left-64 right-0 top-0 h-16 z-30"></app-header>
 
-    <main class="ml-64 pt-16 h-screen overflow-auto bg-gray-50">
-        <router-outlet></router-outlet>
+    <main class="overflow-auto bg-gray-50 ml-64 mt-18">
+      <router-outlet></router-outlet>
     </main>
-    </div>
+  </div>
 
 </div>
