--- a/src/app/pages/configuracoes/configuracoes.html
+++ b/src/app/pages/configuracoes/configuracoes.html
@@ -1,3 +1,3 @@
-<div class="flex p-8">
+<div class="px-6 lg:px-10 py-6 w-full max-w-7xl mx-auto space-y-10">
 <p>Página em Desenvolvimento!</p>
 </div>
