--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -1,4 +1,4 @@
-<header class="w-full bg-white p-4 flex items-center justify-between z-1 shadow">
+<header class="w-full bg-white px-4 lg:px-7 py-4 flex items-center justify-between shadow">
   
   <h1 class="text-2xl font-bold text-gray-800">{{ pageTitle }}</h1>
 
