--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,7 @@
   <div class="flex-1 flex flex-col">
     <app-header class="fixed left-64 right-0 top-0 h-16 z-30"></app-header>
 
-    <main class="overflow-auto bg-gray-50 ml-64 mt-18">
+    <main class="overflow-auto bg-gray-50 ml-64 mt-16 h-[calc(100vh-4rem)]">
       <router-outlet></router-outlet>
     </main>
   </div>
