--- a/src/app/pages/configuracoes/configuracoes.html
+++ b/src/app/pages/configuracoes/configuracoes.html
@@ -1,3 +1,157 @@
-<div class="px-6 lg:px-10 py-6 w-full max-w-7xl mx-auto space-y-10">
-<p>Página em Desenvolvimento!</p>
+<div class="px-6 lg:px-10 py-10 w-full max-w-7xl mx-auto space-y-10">
+
+    <div class="flex row items-center gap-2">
+        <div class="bg-slate-200 p-2 rounded-lg flex items-center justify-center">
+            <lucide-icon name="settings" class="bg-slate-200"></lucide-icon>
+        </div>
+
+        <h1 class="text-sm text-slate-600">
+            Personalize sua experiência de estudos
+        </h1>
+    </div>
+
+<div class="bg-white rounded-lg  shadow-md border border-slate-200">
+
+
+  <div class="flex items-center justify-between p-6 border-b border-slate-200">
+
+    <div class="flex items-center gap-3">
+      <div class="bg-blue-50 text-blue-600 p-2 rounded-lg flex items-center justify-center">
+        <lucide-icon name="circle-user" class="w-5 h-5"></lucide-icon>
+      </div>
+
+      <div>
+        <h2 class="text-slate-900">Perfil do Usuário</h2>
+        <p class="text-slate-600 text-sm">Gerencie suas informações pessoais</p>
+      </div>
+    </div>
+            
+            <div class="flex gap-2">
+            <button 
+            class="text-slate-500 bg-slate-200 hover:bg-slate-300 transition-colors p-2 
+            rounded-lg w-20 cursor-pointer">
+                Editar
+            </button>
+            </div>
+        </div>
+
+        <div class="p-6 space-y-6">
+
+            <div class="flex items-center gap-6">
+                <div class="relative">
+                    <div class="w-24 h-24 bg-blue-500 rounded-full flex items-center justify-center text-white text-2xl">
+                        JB
+                    </div>
+
+                    <button 
+                    class="absolute bottom-0 right-0 w-8 h-8 bg-blue-600 hover:bg-blue-700
+                        text-white rounded-full flex items-center justify-center shadow-lg
+                        transitions-colors cursor-pointer">
+                    <lucide-icon name="camera" class="w-4 h-4"></lucide-icon>
+                    </button>
+                </div>
+
+                <div>
+                    <h3 class="text-slate-900">Joy Boy</h3>
+                    <p class="text-slate-600 text-sm">Aluno desde:</p>
+                </div>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+
+                <div>
+                    <label class="block text-sm text-slate-700 mb-2">Nome Completo</label>
+                    <div class="relative">
+                        <lucide-icon 
+                        name="circle-user"
+                        class="absolute left-2 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400">
+                    </lucide-icon>
+
+                <input 
+                    type="text" 
+                    placeholder="Nome Completo"
+                    class="w-full pl-11 pr-4 py-2.5 border border-slate-200 rounded-lg
+                    focus:outline-none focus:ring=2 focus:ring-blue-500 focus:border-transparent
+                    bg-slate-50 text-slate-600"/>
+                    </div>
+                </div>
+                <div>
+                    <label class="block text-sm text-slate-700 mb-2">Email</label>
+                    <div class="relative">
+                        <lucide-icon 
+                        name="mail"
+                        class="absolute left-2 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400">
+                    </lucide-icon>
+
+                <input 
+                    type="email" 
+                    placeholder="Email"
+                    class="w-full pl-11 pr-4 py-2.5 border border-slate-200 rounded-lg
+                    focus:outline-none focus:ring=2 focus:ring-blue-500 focus:border-transparent
+                    bg-slate-50 text-slate-600"/>
+                    </div>
+                </div>
+                <div>
+                    <label class="block text-sm text-slate-700 mb-2">Telefone</label>
+                    <div class="relative">
+                        <lucide-icon 
+                        name="phone"
+                        class="absolute left-2 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400">
+                    </lucide-icon>
+
+                <input 
+                    type="tel" 
+                    placeholder="Telefone"
+                    class="w-full pl-11 pr-4 py-2.5 border border-slate-200 rounded-lg
+                    focus:outline-none focus:ring=2 focus:ring-blue-500 focus:border-transparent
+                    bg-slate-50 text-slate-600"/>
+                    </div>
+                </div>
+                <div>
+                    <label class="block text-sm text-slate-700 mb-2">Localização</label>
+                    <div class="relative">
+                    <lucide-icon 
+                        name="map-pin"
+                        class="absolute left-2 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400">
+                    </lucide-icon>
+
+                <input 
+                    type="text" 
+                    placeholder="Localização"
+                    class="w-full pl-11 pr-4 py-2.5 border border-slate-200 rounded-lg
+                    focus:outline-none focus:ring=2 focus:ring-blue-500 focus:border-transparent
+                    bg-slate-50 text-slate-600"/>
+                    </div>
+                </div>
+                <div>
+                    <label class="block text-sm text-slate-700 mb-2">Data de Nascimento</label>
+                    <div class="relative">
+                        <lucide-icon 
+                        name="calendar"
+                        class="absolute left-2 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400">
+                    </lucide-icon>
+
+                <input 
+                    type="text" 
+                    placeholder="Data de Nascimento"
+                    class="w-full pl-11 pr-4 py-2.5 border border-slate-200 rounded-lg
+                    focus:outline-none focus:ring=2 focus:ring-blue-500 focus:border-transparent
+                    bg-slate-50 text-slate-600"/>
+                    </div>
+                </div>
+
+            </div>
+        <div>
+            <label class="block text-sm text-slate-700 mb-2">Biografia</label>
+            <textarea 
+                rows="4"
+                placeholder="Quem sou eu?"
+                class="w-full px-2 py-2.5 border border-slate-200 rounded-lg
+                focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent
+                bg-slate-50 text-slate-600">
+            </textarea>
+        </div>
+    </div>
+
+</div>
 </div>
