feat: criação da estrutura inicial da página de relatórios

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -34,7 +34,7 @@
         <li>
             <a href="/relatorios" routerLinkActive="active"
             class="flex items-center gap-3 text-gray-700 hover:text-blue-600 transition">
-            <lucide-icon name="file"></lucide-icon>
+            <lucide-icon name="folder-kanban"></lucide-icon>
             <span class="text-xl font-medium">Relatórios</span>
         </a>
         </li>
