--- a/src/app/pages/relatorios/relatorios.html
+++ b/src/app/pages/relatorios/relatorios.html
@@ -1,3 +1,49 @@
 <div class="px-6 lg:px-10 py-6 w-full max-w-7xl mx-auto space-y-10">
-<p>Página em Desenvolvimento!</p>
+
+    <div class="flex items-center gap-3">
+        <div class="bg-blue-50 text-blue-600 p-2 rounded-lg">
+            <lucide-icon name="folder-kanban" class="w-5 h-5"></lucide-icon>
+        </div>
+
+        <div>
+            <h1 class="text-slate-600 text-md">
+                Acompanhe seu desempenho e evolução
+            </h1>
+        </div>
+    </div>
+
+       <div class="flex flex-wrap items-center gap-3">
+            <select class="px-4 py-2 border border-slate-200 rounded-lg focus:outline-none focus:ring-2
+            focus:ring-blue-500 focus:border-transparent bg-white">
+                <option value="7">Últimos 7 dias</option>
+                <option value="30">Últimos 30 dias</option>
+                <option value="90">Últimos 90 dias</option>
+                <option value="365">Últimos 365 dias</option>
+            </select>
+
+            <select class="px-4 py-2 border border-slate-200 rounded-lg focus:outline-none focus:ring-2
+            focus:ring-blue-500 focus:border-transparent bg-white">
+                <option value="day">Por dia</option>
+                <option value="week">Por semana</option>
+                <option value="month">Por mês</option>
+            </select>
+
+            <button class="ml-auto flex items-center gap-2 px-4 py-2 bg-blue-600 hover:bg-blue-700
+            text-white rounded-lg transitions-colors shadow-sm cursor-pointer">
+                <lucide-icon name="download" class="w-4 h-4"></lucide-icon>
+                <span>Exportar PDF</span>
+            </button>
+        </div>
+
+
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+        <ng-container *ngFor="let s of reportKips">
+            <app-stats-card
+            [title]="s.title"
+            [value]="s.value"
+            [icon]="s.icon"
+            [color]="s.color">
+            </app-stats-card>
+        </ng-container>
+    </div>
 </div>
