feat: adicionando nova rota para a página de configurações no header

--- a/src/app/pages/relatorios/relatorios.html
+++ b/src/app/pages/relatorios/relatorios.html
@@ -1,15 +1,12 @@
 <div class="px-6 lg:px-10 py-6 w-full max-w-7xl mx-auto space-y-10">
-
-    <div class="flex items-center gap-3">
-        <div class="bg-blue-50 text-blue-600 p-2 rounded-lg">
-            <lucide-icon name="folder-kanban" class="w-5 h-5"></lucide-icon>
-        </div>
+    <div class="flex justify-between items-center">
 
         <div>
             <h1 class="text-slate-600 text-md">
                 Acompanhe seu desempenho e evolução
             </h1>
         </div>
+
     </div>
 
        <div class="flex flex-wrap items-center gap-3">
@@ -29,7 +26,8 @@
             </select>
 
             <button class="ml-auto flex items-center gap-2 px-4 py-2 bg-blue-600 hover:bg-blue-700
-            text-white rounded-lg transitions-colors shadow-sm cursor-pointer">
+            text-white rounded-lg transitions-colors shadow-sm cursor-pointer transition-transform
+            duration-300 hover:scale-105">
                 <lucide-icon name="download" class="w-4 h-4"></lucide-icon>
                 <span>Exportar PDF</span>
             </button>
