feat(Relatorios): criação do componente de evolução de estudos do aluno utilizando chart.js

--- a/src/app/pages/relatorios/relatorios.html
+++ b/src/app/pages/relatorios/relatorios.html
@@ -44,4 +44,13 @@
             </app-stats-card>
         </ng-container>
     </div>
+
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+        <div class="lg:col-span-2">
+            <app-study-evolution-chart></app-study-evolution-chart>
+        </div>
+        <div class="lg:sol-span-2">
+            
+        </div>
+    </div>
 </div>
