feat(Relatorios): criação do componente de distruição por matéria

--- a/src/app/pages/relatorios/relatorios.html
+++ b/src/app/pages/relatorios/relatorios.html
@@ -45,12 +45,16 @@
         </ng-container>
     </div>
 
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
         <div class="lg:col-span-2">
             <app-study-evolution-chart></app-study-evolution-chart>
         </div>
-        <div class="lg:sol-span-2">
-            
+        <div class="lg:col-span-2">
+            <app-subject-distribution-chart></app-subject-distribution-chart>
         </div>
+    </div>
+
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+        
     </div>
 </div>
