--- a/src/app/pages/relatorios/relatorios.html
+++ b/src/app/pages/relatorios/relatorios.html
@@ -56,6 +56,6 @@
 
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
         <app-subject-hours-chart></app-subject-hours-chart>
-        
+        <app-weekly-productivity-chart></app-weekly-productivity-chart>
     </div>
 </div>
