--- a/src/app/pages/relatorios/relatorios.html
+++ b/src/app/pages/relatorios/relatorios.html
@@ -1,3 +1,9 @@
 <div class="px-6 lg:px-10 py-6 w-full max-w-7xl mx-auto space-y-10">
-    <p>Relatórios</p>
+    <div class="flex items-center gap-4">
+        <h1 class="text-xl">Olá, Estudante!</h1>
+        <div class="rounded-md p-1">
+            <lucide-icon name="hand-coins" class="w-7 h-7"></lucide-icon>
+        </div>
+    </div>
+    <p class="text-muted-foreground">Continue assim! Você está arrasando nos estudo</p>
 </div>
